btn-icon not visible issue fixed

--- a/css/questiondetails.css
+++ b/css/questiondetails.css
@@ -231,9 +231,12 @@ strong,
 }
 
 .show-main .btn {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
+  background-color: transparent !important;
+  border-color: rgb(255, 255, 255) !important;
+  color: rgb(255, 255, 255) !important;
   font-size: 22px;
   display: inline-flex;
   align-items: center;
